--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,5 +1,36 @@
-@import './base.css';
+@import 'primeicons/primeicons.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer tailwind-base, primevue, tailwind-utilities;
+
+@layer tailwind-base {
+	@tailwind base;
+}
+
+@layer tailwind-utilities {
+	@tailwind components;
+	@tailwind utilities;
+}
+
+.gradient-bg {
+	background-color: #999eff;
+	background-image: radial-gradient(at 43% 84%, hsla(245, 63%, 64%, 1) 0px, transparent 50%),
+		radial-gradient(at 89% 4%, hsla(203, 72%, 63%, 1) 0px, transparent 50%),
+		radial-gradient(at 70% 27%, hsla(253, 73%, 62%, 1) 0px, transparent 50%),
+		radial-gradient(at 57% 96%, hsla(143, 81%, 63%, 1) 0px, transparent 50%),
+		radial-gradient(at 53% 61%, hsla(232, 99%, 71%, 1) 0px, transparent 50%),
+		radial-gradient(at 91% 36%, hsla(258, 98%, 67%, 1) 0px, transparent 50%),
+		radial-gradient(at 15% 45%, hsla(283, 83%, 78%, 1) 0px, transparent 50%);
+}
+
+@media (prefers-color-scheme: dark) {
+	.gradient-bg {
+		background-color: #1a1a2e;
+		background-image: radial-gradient(at 43% 84%, hsla(245, 63%, 34%, 1) 0px, transparent 50%),
+			radial-gradient(at 89% 4%, hsla(203, 72%, 33%, 1) 0px, transparent 50%),
+			radial-gradient(at 70% 27%, hsla(253, 73%, 32%, 1) 0px, transparent 50%),
+			radial-gradient(at 57% 96%, hsla(143, 81%, 33%, 1) 0px, transparent 50%),
+			radial-gradient(at 53% 61%, hsla(232, 99%, 41%, 1) 0px, transparent 50%),
+			radial-gradient(at 91% 36%, hsla(258, 98%, 37%, 1) 0px, transparent 50%),
+			radial-gradient(at 15% 45%, hsla(283, 83%, 38%, 1) 0px, transparent 50%);
+	}
+}
