--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,5 +1,4 @@
-@import 'primeicons/primeicons.css' layer(primeicons);
-@layer tailwind-base, primevue, tailwind-utilities, primeicons;
+@layer tailwind-base, primevue, tailwind-utilities;
 
 @layer tailwind-base {
 	@tailwind base;
