--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -7,6 +7,7 @@
 @layer tailwind-utilities {
 	@tailwind components;
 	@tailwind utilities;
+	@tailwind variants;
 }
 
 .gradient-bg {
@@ -20,7 +21,87 @@
 		radial-gradient(at 15% 45%, hsla(283, 83%, 78%, 1) 0px, transparent 50%);
 }
 
+/* Primary and Surface Palettes */
+:root {
+	--primary-50: theme('colors.indigo.50');
+	--primary-100: theme('colors.indigo.100');
+	--primary-200: theme('colors.indigo.200');
+	--primary-300: theme('colors.indigo.300');
+	--primary-400: theme('colors.indigo.400');
+	--primary-500: theme('colors.indigo.500');
+	--primary-600: theme('colors.indigo.600');
+	--primary-700: theme('colors.indigo.700');
+	--primary-800: theme('colors.indigo.800');
+	--primary-900: theme('colors.indigo.900');
+	--primary-950: theme('colors.indigo.950');
+	--surface-50: theme('colors.slate.50');
+	--surface-100: theme('colors.slate.100');
+	--surface-200: theme('colors.slate.200');
+	--surface-300: theme('colors.slate.300');
+	--surface-400: theme('colors.slate.400');
+	--surface-500: theme('colors.slate.500');
+	--surface-600: theme('colors.slate.600');
+	--surface-700: theme('colors.slate.700');
+	--surface-800: theme('colors.slate.800');
+	--surface-900: theme('colors.slate.900');
+	--surface-950: theme('colors.slate.950');
+	--p-content-border-radius: 6px;
+}
+
+/* Light Mode */
+:root {
+	--surface-0: theme('colors.white');
+	--p-primary-color: var(--primary-500);
+	--p-primary-contrast-color: var(--primary-50);
+	--p-primary-hover-color: var(--primary-600);
+	--p-primary-active-color: var(--primary-700);
+	--p-content-border-color: var(--surface-200);
+	--p-content-hover-background: var(--surface-100);
+	--p-content-hover-color: var(--surface-800);
+	--p-highlight-background: var(--primary-50);
+	--p-highlight-color: var(--primary-700);
+	--p-highlight-focus-background: var(--primary-100);
+	--p-highlight-focus-color: var(--primary-800);
+	--p-text-color: var(--surface-700);
+	--p-text-hover-color: var(--surface-800);
+	--p-text-muted-color: var(--surface-500);
+	--p-text-hover-muted-color: var(--surface-600);
+	--tprimary: theme('colors.slate.950');
+	--tsecondary: theme('colors.slate.700');
+	--ttertiary: theme('colors.slate.500');
+}
+
+/* 
+ * Dark Mode
+ * Change the .p-dark to match the darkMode in tailwind.config.
+ * For example; 
+ *  darkMode: ['selector', '[class*="app-dark"]'] 
+ *  should match;
+ * :root.app-dark
+*/
 @media (prefers-color-scheme: dark) {
+	:root {
+		--surface-0: theme('colors.slate.950');
+		--p-primary-color: var(--primary-400);
+		--p-primary-contrast-color: var(--surface-900);
+		--p-primary-hover-color: var(--primary-300);
+		--p-primary-active-color: var(--primary-200);
+		--p-content-border-color: var(--surface-700);
+		--p-content-hover-background: var(--surface-800);
+		--p-content-hover-color: var(--surface-0);
+		--p-highlight-background: color-mix(in srgb, var(--primary-400), transparent 84%);
+		--p-highlight-color: rgba(255, 255, 255, 0.87);
+		--p-highlight-focus-background: color-mix(in srgb, var(--primary-400), transparent 76%);
+		--p-highlight-focus-color: rgba(255, 255, 255, 0.87);
+		--p-text-color: var(--surface-0);
+		--p-text-hover-color: var(--surface-0);
+		--p-text-muted-color: var(--surface-400);
+		--p-text-hover-muted-color: var(--surface-300);
+		--tprimary: theme('colors.white');
+		--tsecondary: theme('colors.slate.300');
+		--ttertiary: theme('colors.slate.500');
+	}
+
 	.gradient-bg {
 		background-color: #1a1a2e;
 		background-image: radial-gradient(at 43% 84%, hsla(245, 63%, 34%, 1) 0px, transparent 50%),
